--- a/TSwiftChatApp/Info.plist
+++ b/TSwiftChatApp/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>${PRODUCT_NAME} need to access camera to do this action</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>${PRODUCT_NAME} need to access library to do this action</string>
 </dict>
 </plist>
